--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -86,3 +86,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
